# generator_cmake

./: CMakeLists.txt  Readme.md  drogonclient.h  general.qmodel  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwinhigh.cpp  mainwinhigh.h
sqlite/: db.cpp  db.h  orm.cpp  orm.h
widgets/: wstest.cpp  wstest.h  wstest.ui
widgets/apihandler/: apihandler.cpp  apihandler.h
widgets/bashhistoryviewer/: README.md  fav_page.cpp  fav_page.h  history_page.cpp  history_page.h  icons.cpp  icons.h  icons.qrc  initialfunctions.h  qrc_icons.cpp  window.cpp  window.h
widgets/bashrcconfig/: aliasstream.cpp  aliastab.cpp  aliastab.h  buffer.cpp  global.h  prompttab.cpp  prompttab.h  searcher.cpp  tab.cpp  tab.h  window.cpp  window.h
widgets/bookmarks/: bookmarks.cpp  bookmarks.h  terminal.qmodel
widgets/classgenerator/: classgenerator.cpp  classgenerator.h
widgets/dgraphcode/: dgraphcodegenerator.cpp  dgraphcodegenerator.h  model.qmodel
widgets/generator/: CMakeLists.txt
widgets/generator/Grammer/: grammer.cpp  grammer.h
widgets/generator/generator/: ControllerEntry.cpp  ControllerEntry.h  DGraphSchema.cpp  DGraphSchema.h  JSClass.cpp  JSClass.h  Service.cpp  Service.h  mygenerator.cpp  mygenerator.h  protogenerator.cpp  protogenerator.h  syncroute.cpp  syncroute.h
widgets/generator/gui/: Genmainwinhigh.cpp  Genmainwinhigh.h  model.qmodel
widgets/generator/gui/editor/: mainwindow.cpp  mainwindow.h
widgets/generator/templates/: service_cc.csp  service_h.csp
widgets/json/: jsongenerator.cpp  jsongenerator.h  jsongenerator.ui
widgets/modelwriter/: data.cpp  data.h  modelwriter.cpp  modelwriter.h  modelwriter.ui  treeitem.cpp  treeitem.h
widgets/namespace/: namespacegenerator.cpp  namespacegenerator.h  namespacegenerator.ui
widgets/protobuff/: protobuffcommand.cpp  protobuffcommand.h
widgets/querybuilder/: querybuilder.cpp  querybuilder.h
widgets/react/: reactgenerator.cpp  reactgenerator.h
widgets/reminder/: reminderwidget.cpp  reminderwidget.h
widgets/scripter/: README.md  scripter.cpp  scripter.h
widgets/scripter/editor/: mainwindow.cpp  mainwindow.h
widgets/sqlcompare/: sqlcompare.cpp  sqlcompare.h  sqlcompare.ui
widgets/stl/: stl.cpp  stl.h  stl.ui
widgets/svelte/: model.qmodel  sveltegenerator.cpp  sveltegenerator.h
widgets/syncroute/: model.qmodel  syncroute.cpp  syncroute.h
widgets/terminal/: termwidget.cpp  termwidget.h  termwidgettool.cpp  termwidgettool.h
widgets/wstest/: wstest.cpp  wstest.h  wstest.ui
widgets/yaml/: yamlgenerator.cpp  yamlgenerator.h  yamlgenerator.ui
